--- a/src/dom-comps/vertical-split-mmm.html
+++ b/src/dom-comps/vertical-split-mmm.html
@@ -1,5 +1,10 @@
 <style>
-:host { display:flex; flex-direction:row; height:100%; width:100%; }
+:host {
+    display:flex;
+    flex-direction:row;
+    height: 100%;
+    width: 100%;
+}
 
 slot[name="left"],
 slot[name="right"] {
@@ -18,7 +23,7 @@ slot[name="right"] {
     left: -2px;
     z-index: 1;
     height: 100%;
-    width: 4px;
+    width: 5px;
     background: #57f;
     opacity: 0;
     transition: opacity 0.1s;
