--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <script type="module" src="./src/app.js"></script>
+    <script type="module" src="./src/app2.js"></script>
 </body>
 
 </html>
