--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <title>Spline Editor Layout – Splits</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
         body,
         html {
             margin: 0;
