--- a/src/dom-comps/list-item.html
+++ b/src/dom-comps/list-item.html
@@ -10,15 +10,16 @@
         display: flex;
         box-sizing: border-box;
         align-items: center;
-        height: 28px;
+        height: 24px;
         padding: 0 8px;
         cursor: default;
         color: #ddd;
+        opacity: 1;
         transition: background-color 0.08s;
     }
     .list-item.hidden {
         display: none;
-        transition: display 1.2s;
+        opacity: 0;
     }
 
     .list-item:hover {
@@ -26,8 +27,8 @@
     }
 
     .list-item.selected {
-        background: #04356560;
-        border: 1px solid #06f;
+        background: hsl(220, 20%, 20%);
+        border: 1px solid hsl(210, 70%, 50%);
         color: white;
     }
 
