--- a/src/dom-comps/list-view.html
+++ b/src/dom-comps/list-view.html
@@ -1,7 +1,7 @@
 <style>
     :host {
         display: block;
-        height: 100vh;
+        height: 100dvh;
         background-color: #151410;
         overflow: auto !important;
     }
