--- a/src/dom-comps/toolbar.html
+++ b/src/dom-comps/toolbar.html
@@ -1,6 +1,8 @@
 <style>
     :host{
         background-color: #151410;
+        height: 100%;
+        width: 100%;
     }
     div {
         display: flex;
