--- a/src/dom-comps/list-item.html
+++ b/src/dom-comps/list-item.html
@@ -43,11 +43,6 @@
         line-height: 16px;
         color: #bbb;
         cursor: pointer;
-        opacity: 0;
-    }
-
-    .list-item.has-children .expander {
-        opacity: 1;
     }
 
     .expander:hover {
@@ -64,7 +59,7 @@
 </style>
 
 <div class="list-item">
-    <button class="expander">▽</button>
+    <button class="expander">□</button>
     <span class="label"></span>
 </div>
 <!-- ▶▷▼▽ -->
