--- a/src/dom-comps/list-view.html
+++ b/src/dom-comps/list-view.html
@@ -5,6 +5,8 @@
         background-color: #151410;
         overflow: auto !important;
     }
+
+    /* scrollbar style */
     :host::-webkit-scrollbar {
         width: 10px;
     }
