--- a/src/dom-comps/toolbar.html
+++ b/src/dom-comps/toolbar.html
@@ -10,7 +10,7 @@
         /* gap: 10px; */
         /* flex-wrap: wrap; */
         justify-content: space-between;
-        padding: 2px;
+        /* padding: 2px; */
         background-color: #151410;
     }
     button {
@@ -18,7 +18,7 @@
         align-items: center;
         justify-content: center;
         width: 24px;
-        height: 24px;
+        /* height: 24px; */
         border: none;
         color: #ddd;
         background-color: transparent;
@@ -29,11 +29,11 @@
         background-color: hsl(40, 10%, 20%);
     }
     button:active {
-        top: -1px;
-        background-color: hsl(40, 10%, 20%);
+        border: 1px solid hsl(220, 20%, 50%);
     }
 </style>
 <div class="button-bar">
     <button class="add-button">+</button>
+    <button class="add-folder-button">D</button>
     <button class="remove-button">x</button>
 </div>
