- lots of style fixing and cleanup  - renaming and deleting useless files - new button design

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Spline Editor Layout – Splits</title>
+    <link href="./src/app.css" rel="stylesheet">
     <style>
         * {
             box-sizing: border-box;
