--- a/src/dom-comps/list-view.html
+++ b/src/dom-comps/list-view.html
@@ -2,7 +2,7 @@
     :host {
         display: block;
         height: 100dvh;
-        background-color: #151410;
+        background-color: var(--color-bg);
         overflow: auto !important;
     }
 
