--- a/src/dom-comps/toolbar.html
+++ b/src/dom-comps/toolbar.html
@@ -34,6 +34,33 @@
 </style>
 <div class="button-bar">
     <button class="add-button">+</button>
-    <button class="add-folder-button">D</button>
+    <button class="add-folder-button">○</button>
     <button class="remove-button">x</button>
 </div>
+<div class="toolbar">
+    <div class="toolbar-left">
+        <button class="tool-btn add-item-button" title="New Item"></button>
+        <button class="tool-btn add-folder-button" title="New Folder"></button>
+    </div>
+
+    <div class="toolbar-right">
+        <!-- <button class="tool-btn" title="Align left">⇤</button>
+        <button class="tool-btn" title="Align center">↔</button>
+        <button class="tool-btn" title="Align right">⇥</button> -->
+        <button class="tool-btn delete" title="Delete">🗑</button>
+    </div>
+</div>
+<!-- <div class="__toolbar-left">
+    <button class="tool-btn" title="Bold">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">…</svg>
+    </button>
+    <button class="tool-btn active" title="Italic">
+        <span class="symbol">𝑖</span>
+    </button>
+    <button class="tool-btn" title="Underline">
+        <span class="symbol">U̲</span>
+    </button>
+    <button class="tool-btn" title="Bullet list">•</button>
+    <button class="tool-btn delete" title="Delete">🗑</button>
+    <button class="tool-btn delete" title="Delete">😀</button>
+</div> -->
