--- a/index.html
+++ b/index.html
@@ -3,25 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Spline Editor Layout – Splits</title>
+    <title>JSCOM</title>
     <link href="./src/app.css" rel="stylesheet">
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-        body,
-        html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            overflow: hidden;
-            font-family: sans-serif;
-        }
-    </style>
 </head>
 
 <body>
-    <script type="module" src="./src/app2.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/path-data-polyfill@latest/path-data-polyfill.js"></script>
+    <script type="module" src="./src/app.js"></script>
 </body>
 
 </html>
