--- a/src/dom-comps/list-item.html
+++ b/src/dom-comps/list-item.html
@@ -39,7 +39,7 @@
         background: none;
         border: none;
         padding: 0;
-        font-size: 12px;
+        font-size: var(--fontsize);
         line-height: 16px;
         color: #bbb;
         cursor: pointer;
@@ -54,7 +54,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        font-size: 13px;
+        font-size:  var(--fontsize);
     }
 </style>
 
