--- a/src/dom-comps/top-bottom.html
+++ b/src/dom-comps/top-bottom.html
@@ -4,6 +4,11 @@
         flex-direction: column;
         height: 100%;
         width: 100%;
+        overflow: hidden;
+    }
+
+    ::slotted(*) {
+        padding: 0 !important;
     }
     
     .divider {
